# AIRAGpedia

./: .gitignore  Tool_Spec.md  pyproject.toml
src/embedding/: base.py  gemini_embed.py
src/generation/: base.py  gemini_gen.py  prompt_builder.py
src/generation/templates/: base.py  wikipedia_prompt.py
src/ingestion/loaders/: base.py  wikipedia_loader.py
src/preprocessing/: cleaning.py
src/preprocessing/chunking/: base.py  fixed.py
src/retrieval/: base.py  faiss_search.py
src/utils/: logger.py
src/vector_store/: base.py  faiss_store.py
